0.1.5 xxxx-xx-xx
================

Bugfixes
 * mtimes on decorated intervals supports broadcasting of scalar factors

0.1.4 2015-03-15
================

 * New interval constructors: hull, midrad

 * New interval arithmetic functions: cbrt, cot, coth, csc, csch, dilog, ei, 
   erf, erfc, gamma, gammaln, psi, rsqrt, sec, sech
 
 * mtimes: Support for fast, less accurate evaluation using BLAS routines
 
 * mldivide, mrdivide, inv: Improved performance by using faster mtimes
 
 * infsup, infsupdec: Enabled broadcasting of scalar boundaries

 * rad: May compute mid and rad simultaneously
 
 * subsref: Access to interval properties using field syntax: x.inf and x.sup
 
0.1.3 2015-02-24
================

Fixed a compile error that could possibly occur during package installation

0.1.2 2015-02-22
================

 * New interval arithmetic functions: nthroot, hypot, log1p, expm1

 * lu: New operation for LU(P) decomposition of interval matrices
 
 * nai: New decorated interval constant

 * mldivide, mrdivide, inv: Greatly improved accuracy and performance of the
   linear solver
 
 * Improved accuracy of vector sums, dot products, pownrev, and powrev2

 * powrev1, powrev2, pownrev, mulrev: Now allow non-scalar arguments
 
 * overlap: Renamed one overlapping state from equal to equals
 
 * mulrevtopair: No longer available, use mulrev with two output parameters for
   two-output division
 
 * setdec: No longer available, use infsupdec instead
 
 * Small performance improvements

Bugfixes
 * Compatibility with GNU Octave 4.0 (bug #43925)
 * Build problems during package installation with environment variables
 * iscommoninterval: The decorated variant must return true for common
   intervals without com decoration
 * eq: The decorated variant must not consider the decoration value
 * Several decorated functions: When evaluated on a subset of the function's
   domain, the result's decoration must be dac if the function's restriction
   to that subset is continuous